Displayed App Name on Browser

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <title>Number Facts</title>
 </head>
 <body>
-    
+    <body class="bg-dark">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <h1>Number Facts</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </body>
 </html>
