Set App Name to middle of page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body class="bg-dark">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 mx-auto">
                     <div class="card">
                         <h1>Number Facts</h1>
                     </div>
