Set .card Background to Blue

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mx-auto">
-                    <div class="card">
+                    <div class="card bg-primary">
                         <h1>Number Facts</h1>
                     </div>
                 </div>
