Add description & number input to .card

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <div class="col-md-6 mx-auto">
                     <div class="card bg-primary text-white mt-5 p-4">
                         <h1>Number Facts</h1>
+                        <p>Enter a number and get a random fact</p>
+                        <input type="number" class="form-control form-control lg" id="numberInput" placeholder="Enter any number...">
                     </div>
                 </div>
             </div>
