--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <!-- LOAD BOOTSTRAP 4 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <style>
+        #fact{
+
+            display: none;
+
+        }
+    </style>
+
     <title>Number Facts</title>
 </head>
 <body>
@@ -18,6 +26,14 @@
                         <h1>Number Facts</h1>
                         <p>Enter a number and get a random fact</p>
                         <input type="number" class="form-control form-control lg" id="numberInput" placeholder="Enter any number...">
+
+                        <!-- DISPLAY OUTPUT -->
+                        <div id="fact" class="card-body">
+                            <h4 class="card-title">
+                                Number Fact
+                            </h4>
+                            <p id="factText" class="card-text"></p>
+                        </div>
                     </div>
                 </div>
             </div>
