Created Variables, Event Listener for Input, & getFactAjax()

--- a/index.html
+++ b/index.html
@@ -38,6 +38,27 @@
                 </div>
             </div>
         </div>
+
+        <script>
+
+            // SELECT ELEMENTS
+            let fact  = document.querySelector('#fact');
+            let factText  = document.querySelector('#factText');
+            let numberInput = document.querySelector('#numberInput');
+
+            // ADD EVENT LISTENER
+            numberInput.addEventListener('input', getFactAjax);
+
+            // CREATE FUNCTION
+            function getFactAjax(){
+
+                // TEST
+                console.log("Input");
+
+            }
+
+
+        </script>
     </body>
 </body>
 </html>
