Logged input value

--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
             // CREATE FUNCTION
             function getFactAjax(){
 
-                // TEST
-                console.log("Input");
+              // GET VALUE FROM INPUT
+              let number = numberInput.value;
+
+              // TEST
+              console.log(number);
 
             }
 
