Prevented loading html on clearing input

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               xhr.onload = function(){
 
                 // status 200 = OK
-                if(this.status == 200){
+                if(this.status == 200 && number != ''){
 
                     // TEST
                     console.log(this.responseText);
