Displayed Output area on getting response

--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
                 // status 200 = OK
                 if(this.status == 200 && number != ''){
 
-                    // TEST
-                    console.log(this.responseText);
+                    // DISPLAY OUTPUT AREA
+                    fact.style.display = 'block';
+
+                    
 
                 }
 
