Output API response to page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                     // DISPLAY OUTPUT AREA
                     fact.style.display = 'block';
 
-                    
+                    // DISPLAY RESPONSE
+                    factText.innerText = this.responseText;
+
 
                 }
 
