--- a/index.html
+++ b/index.html
@@ -97,7 +97,14 @@
                 fetch('http://numbersapi.com/' + number)
                     .then(response => response.text())
                     .then(data => {
-                        console.log(data);
+
+                        if(number != ''){
+
+                            fact.style.display = 'block';
+                            factText.innerText = data;
+
+                        }
+
                     })
                     .catch(err => console.log(err));
 
